# RayTracing

./: .editorconfig  CMakeLists.txt  README.md  RayTracing.sln  RayTracing.vcxproj  RayTracing.vcxproj.filters  count.py
src/: main.cpp
src/objects/: arealight.cpp  arealight.h  box.cpp  box.h  intersect.cpp  intersect.h  light.cpp  light.h  material.cpp  material.h  mesh_object.cpp  mesh_object.h  object.cpp  object.h  plane.cpp  plane.h  pointlight.cpp  pointlight.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/tracer/: camera.cpp  camera.h  ray.cpp  ray.h  scene.cpp  scene.h  tracer.cpp  tracer.h
src/util/: SimpleObject.cpp  SimpleObject.h  Vec3f.cpp  Vec3f.h  color.cpp  color.h  image.cpp  image.h  vector3.cpp  vector3.h
test/: anti.json  config.json  deep.json  soft.json  test.json
